[fix/fix-bug] fix item title and description not in line when alignment left and add icon wrapper margin

--- a/src/editor/blocks/gallery/styles/style.scss
+++ b/src/editor/blocks/gallery/styles/style.scss
@@ -490,6 +490,7 @@
                             .item-content {
                                 color: var(--guten-txt-alt-color);
                                 font-size: 12px;
+                                margin: 5px;
                                 font-family: inherit;
                             }
                             .item-buttons {
